kubernetes/apps/home/trillium-next/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://kubernetesjsonschema.dev/v1.32.1/networkpolicy-networking-v1.json
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: trillium-next
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/controller: trillium
      app.kubernetes.io/instance: trillium-next
      app.kubernetes.io/name: trillium-next
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: network
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - port: 8080
          protocol: TCP
